# mm-conv-vlm-eval

./: README.md  pyproject.toml
data/: single_exact_meta.json
vlmeval/: main.py
vlmeval/configs/: default.yaml  eval.yaml  loader.py
vlmeval/configs/datasets/: mmconv_referential.yaml
vlmeval/configs/models/: __init__.py  florence2.yaml  ggpt.yaml  kosmos2.yaml  qwen.yaml  shikra.yaml
vlmeval/datasets/: json_mmconv_referential.py
vlmeval/eval/: evaluator.py  evaluator_multi_gpu.py
vlmeval/metrics/: iou.py
vlmeval/mmconv_vlm_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
vlmeval/models/detectors/: clip_adapter.py  groundingdino_adapter.py  owl2_adapter.py
vlmeval/models/mono_vlm/: florence2_adapter.py  ggpt_adapter.py  kosmos2_adapter.py  qwen_adapter.py  shikra_adapter.py
vlmeval/runners/: run_mono.py  runner_core.py
vlmeval/utils/: geometry.py  masks.py  viz.py
vlmeval/vlmeval.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
